--- a/conf/ci.yaml
+++ b/conf/ci.yaml
@@ -18,3 +18,6 @@ remotes:
     <<: {}                   # DO NOT edit this line
     
     # Add output of `hasura conf generate-remote` below this line
+
+Get https://h34-nylon80-stg.hasura-app.io:3443/api/v1/namespaces/hasura/configmaps/controller-conf: dial tcp: lookup h34-nylon80-stg.hasura-app.io on 192.168.0.1:53: no such host
+[91m×[0m Kube clientset error [91merror[0m=Cannot fetch configmap controller-conf from hasura namespace
