--- a/clusters.yaml
+++ b/clusters.yaml
@@ -1,9 +1,3 @@
-# Stores the information about the clusters added to this project
-#
-# - This file gets populated with the cluster information when you run
-#   `hasura cluster add`
-# - When your project is published on hasura hub, this file will not
-#   have any information about your clusters
 - alias: hasura
   config:
     configmap: controller-conf
@@ -11,4 +5,10 @@
   data: null
   kubeContext: h34-nylon80-stg
   name: h34-nylon80-stg
-  services: null
+- alias: test
+  config:
+    configmap: controller-conf
+    namespace: hasura
+  data: null
+  kubeContext: cartwheel94
+  name: cartwheel94
