--- a/conf/routes.yaml
+++ b/conf/routes.yaml
@@ -159,8 +159,11 @@ notify:
     upstreamServicePath: /
     upstreamServicePort: 80
     corsPolicy: allow_all
-
-# To see actual endpoints for these routes, use `$ hasura cluster status`
-
-Get https://h34-nylon80-stg.hasura-app.io:3443/api/v1/namespaces/hasura/configmaps/controller-conf: dial tcp: lookup h34-nylon80-stg.hasura-app.io on 192.168.0.1:53: no such host
-[91m×[0m Kube clientset error [91merror[0m=Cannot fetch configmap controller-conf from hasura namespace
+api:
+  /:
+    corsPolicy: allow_all
+    upstreamService:
+      name: api
+      namespace: '{{ cluster.metadata.namespaces.user }}'
+    upstreamServicePath: /
+    upstreamServicePort: 80
